--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase": "^9.8.3",
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
